// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer animation fadeIn 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: gdMPTF 0.2s ease-in-out forwards;
  animation: gdMPTF 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="animation-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="animation-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer animation fadeIn 2`] = `""`;

exports[`Layer animation false 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="animation-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="animation-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer animation false 2`] = `""`;

exports[`Layer animation slide 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="animation-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="animation-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer animation slide 2`] = `""`;

exports[`Layer animation true 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="animation-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="animation-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer animation true 2`] = `""`;

exports[`Layer custom margin 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 50px - 40px);
  max-width: calc(100% - 30px - 20px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer custom margin 2`] = `""`;

exports[`Layer dark context 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="non-modal-test"
>
  <a
    aria-hidden="true"
    class="c1"
    tabindex="-1"
  />
  This is a non-modal layer
</div>
`;

exports[`Layer dark context 2`] = `""`;

exports[`Layer focus on layer 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  data-testid="focus-layer-test"
>
  <a
    aria-hidden="true"
    class="c1"
    tabindex="-1"
  />
  <input />
</div>
`;

exports[`Layer full false 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="full-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="full-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer full false 2`] = `""`;

exports[`Layer full horizontal 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  left: 0px;
  right: 0px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-animation: dcHpVA 0.2s ease-in-out forwards;
  animation: dcHpVA 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="full-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="full-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer full horizontal 2`] = `""`;

exports[`Layer full true 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  -webkit-animation: aUlIN 0.2s ease-in-out forwards;
  animation: aUlIN 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="full-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="full-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer full true 2`] = `""`;

exports[`Layer full vertical 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 0px;
  bottom: 0px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  -webkit-animation: XCWMt 0.2s ease-in-out forwards;
  animation: XCWMt 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="full-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="full-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer full vertical 2`] = `""`;

exports[`Layer hidden 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="hidden-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer hidden 2`] = `""`;

exports[`Layer hidden 3`] = `
<div
  class="StyledLayer-d9d34e-0 bFvFXg"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-d9d34e-1 eCcZDi"
  />
  <div
    class="StyledLayer__StyledContainer-d9d34e-2 erhsRp"
    id="hidden-test"
  >
    <a
      aria-hidden="true"
      class="LayerContainer__HiddenAnchor-sc-1ipspnq-0 gChJkL"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer hidden 4`] = `""`;

exports[`Layer is accessible 1`] = `
<div
  data-testid="test-body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  data-testid="test-layer-node"
>
  This is a layer
  <input
    data-testid="test-input"
  />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  data-testid="test-body-node"
>
  <input />
  <input />
</div>
`;

exports[`Layer margin large 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 32px - 32px);
  max-width: calc(100% - 32px - 32px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer margin large 2`] = `""`;

exports[`Layer margin medium 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 16px - 16px);
  max-width: calc(100% - 16px - 16px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer margin medium 2`] = `""`;

exports[`Layer margin none 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer margin none 2`] = `""`;

exports[`Layer margin small 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 8px - 8px);
  max-width: calc(100% - 8px - 8px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer margin small 2`] = `""`;

exports[`Layer margin xsmall 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 4px - 4px);
  max-width: calc(100% - 4px - 4px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="margin-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer margin xsmall 2`] = `""`;

exports[`Layer non-modal 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="non-modal-test"
>
  <a
    aria-hidden="true"
    class="c1"
    tabindex="-1"
  />
  This is a non-modal layer
</div>
`;

exports[`Layer non-modal 2`] = `""`;

exports[`Layer not steal focus from an autofocus focusable element 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  data-testid="focus-layer-input-test"
>
  <a
    aria-hidden="true"
    class="c1"
    tabindex="-1"
  />
  <input
    data-testid="focus-input"
  />
  <button
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Layer plain 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 0;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="plain-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="plain-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a plain layer
  </div>
</div>
`;

exports[`Layer plain 2`] = `""`;

exports[`Layer position bottom 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  bottom: 0px;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  -webkit-animation: jsmUBO 0.2s ease-in-out forwards;
  animation: jsmUBO 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="position-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer position bottom 2`] = `""`;

exports[`Layer position center 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="position-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer position center 2`] = `""`;

exports[`Layer position left 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  left: 0px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-animation: fNWKbM 0.2s ease-in-out forwards;
  animation: fNWKbM 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="position-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer position left 2`] = `""`;

exports[`Layer position right 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  right: 0px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-animation: lhngOP 0.2s ease-in-out forwards;
  animation: lhngOP 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="position-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer position right 2`] = `""`;

exports[`Layer position top 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: unset;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100vw;
  height: 100vh;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 0px;
  left: 50%;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  -webkit-animation: bAkQbM 0.2s ease-in-out forwards;
  animation: bAkQbM 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    id="position-test"
  >
    <a
      aria-hidden="true"
      class="c3"
      tabindex="-1"
    />
    This is a layer
  </div>
</div>
`;

exports[`Layer position top 2`] = `""`;

exports[`Layer should be null prior to mounting, displayed after mount 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: fixed;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: bBMZdm 0.2s ease-in-out forwards;
  animation: bBMZdm 0.2s ease-in-out forwards;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width:512px) {
  .c0 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  data-testid="test-layer-container"
>
  <a
    aria-hidden="true"
    class="c1"
    tabindex="-1"
  />
  Layer container is available
</div>
`;
